add python version 3.6, glob->glob2, remove os

--- a/saxavord.yml
+++ b/saxavord.yml
@@ -3,14 +3,14 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - python=3.6
+  - glob2
   - ipython
   - jupyter
   - xarray
   - rasterio
   - numpy
   - pandas
-  - glob
-  - os
   - geopandas
   - shapely
   - descartes
